# gh-actions-test

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: deploy.yml
